fix an issue